--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
   <body style="background-color:#000000; color: #ffffff;">
     hi
+    <img src="meowl-removebg-preview.png">
   </body>
 </html>
